<resources>

    <string name="app_name">EarthQuake Alert</string>

    <string name="title_activity_main">Latest Earthquakes</string>
    <string name="title_activity_map">View Earthquakes</string>
    <string name="title_activity_statistics">Earthquake Statistics</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_details">Earthquake Details</string>
    <string name="title_activity_about">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_map">Map</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_settings">Settings</string>

    <string name="email_address">89753.gosalia@students.itu.edu</string>

    <string name="pref_magnitude_label">Default Magnitude Filter</string>
    <string name="pref_magnitude_label_1.0">1.0+</string>
    <string name="pref_magnitude_label_2.0">2.0+</string>
    <string name="pref_magnitude_label_3.0">3.0+</string>
    <string name="pref_magnitude_label_4.0">4.0+</string>
    <string name="pref_magnitude_label_4.5">4.5+</string>
    <string name="pref_magnitude_label_5.0">5.0+</string>
    <string name="pref_magnitude_label_5.5">5.5+</string>
    <string name="pref_magnitude_label_6.0">6.0+</string>
    <string name="pref_magnitude_label_6.5">6.5+</string>
    <string name="pref_magnitude_label_7.0">7.0+</string>
    <string name="pref_magnitude_label_7.5">7.5+</string>
    <string name="pref_magnitude_key">magnitude</string>
    <string name="pref_magnitude_1.0">1.0</string>
    <string name="pref_magnitude_2.0">2.0</string>
    <string name="pref_magnitude_3.0">3.0</string>
    <string name="pref_magnitude_4.0">4.0</string>
    <string name="pref_magnitude_4.5">4.5</string>
    <string name="pref_magnitude_5.0">5.0</string>
    <string name="pref_magnitude_5.5">5.5</string>
    <string name="pref_magnitude_6.0">6.0</string>
    <string name="pref_magnitude_6.5">6.5</string>
    <string name="pref_magnitude_7.0">7.0</string>
    <string name="pref_magnitude_7.5">7.5</string>

    <string name="pref_duration_label">Default Date Filter</string>
    <string name="pref_duration_label_last_hour">Last Hour</string>
    <string name="pref_duration_label_today">Today</string>
    <string name="pref_duration_label_last_24_hr">Last 24 hr</string>
    <string name="pref_duration_label_this_week">This Week</string>
    <string name="pref_duration_key">duration</string>
    <string name="pref_duration_last_hour">lasthour</string>
    <string name="pref_duration_today">today</string>
    <string name="pref_duration_last_24_hr">last24hr</string>
    <string name="pref_duration_this_week">thisweek</string>

    <string name="pref_distance_label">Distance Units</string>
    <string name="pref_distance_label_miles">Miles</string>
    <string name="pref_distance_label_kilometers">Kilometers</string>
    <string name="pref_distance_key">distance</string>
    <string name="pref_distance_miles">miles</string>
    <string name="pref_distance_kilometers">kilometers</string>

    <string name="link">&lt;a href="HREF">View on USGS Website&lt;/a></string>
    <string name="name">Jigar Rajnikant Gosalia</string>
    <string name="student_id">89753</string>
    <string name="course">CSC519 Android Application Development</string>
    <string name="trimester">Summer 2017</string>
    <string name="professor">Prof. Tony Nguyen</string>
    <string name="software_version">1.0</string>
    <string name="description">An Android app that displays earthquake information using free data APIs from https://earthquake.usgs.gov/</string>

    <string name="about_name">Name:</string>
    <string name="about_student_id">Student Id:</string>
    <string name="about_course">Course:</string>
    <string name="about_professor">Professor:</string>
    <string name="about_trimester">Trimester:</string>
    <string name="about_version">Version:</string>
    <string name="about_description">Description:</string>
    <string name="about_install">Installed:</string>
    <string name="about_last_viewed">Last Viewed:</string>

    <string name="details_title">Title:</string>
    <string name="details_location">Location:</string>
    <string name="details_coordinates">Coordinates:</string>
    <string name="details_time">Time:</string>
    <string name="details_depth">Depth:</string>
    <string name="details_event_id">EventId:</string>
    <string name="details_significance">Significance:</string>
    <string name="details_review_status">Review Status:</string>
    <string name="details_more_details">More Details:</string>

    <string name="statistics_today">Earthquakes Today</string>
    <string name="statistics_this_week">This Week</string>
    <string name="statistics_this_month">This Month</string>

</resources>
