<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="main_screen">

    <PreferenceCategory
        android:key="earthquake_filters"
        android:title="EARTHQUAKE FILTERS" >
        <ListPreference
            android:title="@string/pref_magnitude_label"
            android:key="@string/pref_magnitude_key"
            android:defaultValue="@string/pref_magnitude_3.0"
            android:entryValues="@array/pref_magnitude_values"
            android:entries="@array/pref_magnitude_options" />
        <ListPreference
            android:title="@string/pref_duration_label"
            android:key="@string/pref_duration_key"
            android:defaultValue="@string/pref_duration_last_24_hr"
            android:entryValues="@array/pref_duration_values"
            android:entries="@array/pref_duration_options" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="data_customization"
        android:title="DATA CUSTOMIZATION" >
        <ListPreference
            android:title="@string/pref_distance_label"
            android:key="@string/pref_distance_key"
            android:defaultValue="@string/pref_distance_miles"
            android:entryValues="@array/pref_distance_values"
            android:entries="@array/pref_distance_options" />
    </PreferenceCategory>

</PreferenceScreen>