<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.itu.csc.earthquakealert.activities.AboutFragment">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="edu.itu.csc.earthquakealert.activities.AboutActivity">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_layout"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/name_text"
                android:textStyle="bold"
                android:text="@string/about_name"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/name_data"
                android:text="@string/name"
                android:textStyle="bold|italic"
                android:textColor="#228B22"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/student_id_layout"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/student_id_text"
                android:textStyle="bold"
                android:text="@string/about_student_id"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/student_id_data"
                android:textStyle="bold|italic"
                android:textColor="#228B22"
                android:text="@string/student_id"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/course_layout"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/course_text"
                android:textStyle="bold"
                android:text="@string/about_course"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/course_data"
                android:textStyle="bold|italic"
                android:textColor="#228B22"
                android:text="@string/course"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/professor_layout"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/professor_text"
                android:text="@string/about_professor"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/professor_data"
                android:textStyle="bold|italic"
                android:textColor="#228B22"
                android:text="@string/professor"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/trimester_layout"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/trimester_text"
                android:text="@string/about_trimester"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/trimester_data"
                android:textStyle="bold|italic"
                android:textColor="#228B22"
                android:text="@string/trimester"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/version_layout"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/version_text"
                android:textStyle="bold"
                android:text="@string/about_version"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/version_data"
                android:textStyle="bold|italic"
                android:textColor="#228B22"
                android:text="@string/software_version"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/description_layout"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/description_text"
                android:textStyle="bold"
                android:text="@string/about_description"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/description_data"
                android:inputType="textMultiLine"
                android:textStyle="bold|italic"
                android:textColor="#228B22"
                android:text="@string/description"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/install_layout"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/install_text"
                android:textStyle="bold"
                android:text="@string/about_install"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/install_data"
                android:textStyle="bold|italic"
                android:textColor="#228B22"
                android:layout_weight="2"/>
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/last_layout"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/last_text"
                android:textStyle="bold"
                android:text="@string/about_last_viewed"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/last_data"
                android:textStyle="bold|italic"
                android:textColor="#228B22"
                android:layout_weight="2"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
