<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.itu.csc.earthquakealert.activities.DetailsActivity">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_layout"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/title_text"
            android:text="@string/details_title"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/title_data"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location_layout"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/location_text"
            android:text="@string/details_location"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/location_data"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/coordinates_layout"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/coordinates_text"
            android:text="@string/details_coordinates"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/coordinates_data"
            android:layout_weight="2"/>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/time_layout"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/time_text"
            android:text="@string/details_time"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/time_data"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/depth_layout"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/depth_text"
            android:text="@string/details_depth"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/depth_data"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_id_layout"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/event_id_text"
            android:text="@string/details_event_id"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/event_id_data"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/significance_layout"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/significance_text"
            android:text="@string/details_significance"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/significance_data"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/review_status_layout"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/review_status_text"
            android:text="@string/details_review_status"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/review_status_data"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/url_link_layout"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/url_link_text"
            android:text="@string/details_more_details"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/url_link_data"
            android:layout_weight="2"/>
    </LinearLayout>


</LinearLayout>
