<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:weightSum="4"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:id="@+id/one_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/today_count"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textColor="#228B22"
                android:textStyle="bold"
                android:gravity="center|bottom"
                android:textSize="64dp" />

            <TextView
                android:id="@+id/today_text"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|left"
                android:text="@string/statistics_today" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/two_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/two_one_layout"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="3">

                <TextView
                    android:id="@+id/week_count"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|bottom"
                    android:textColor="#228B22"
                    android:textSize="48dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/week_text"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="bottom|center"
                    android:text="@string/statistics_this_week"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/two_two_layout"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="3">

                <TextView
                    android:id="@+id/month_count"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|bottom"
                    android:textColor="#228B22"
                    android:textSize="48dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/month_text"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="bottom|center"
                    android:text="@string/statistics_this_month"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/two_three_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="3"></LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/three_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/no_data_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/four_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="horizontal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/update_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#696969"
            android:paddingLeft="5dp"
            android:textColor="#FFFFFF"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/update_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="5dp"
            android:gravity="right"
            android:textSize="15dp"
            android:textColor="#FFFFFF"
            android:background="#696969"/>

    </LinearLayout>

</RelativeLayout>